code/SampleProgramToInterface/src/main/java/com/sample/bad/D.java
package com.sample.bad;

class D {

    int doXWork() {
        return 10;
    }

    int doYWork() {
        return 20;
    }

    int doZWork() {
        return 30;
    }


}
